Fixed profile nav-dropdown item alignment issues.

--- a/public/Custom/css/custom.css
+++ b/public/Custom/css/custom.css
@@ -34,3 +34,7 @@
     font-size: 10px;
     line-height: 14px;
 }
+
+.user-footer:after {
+    display: none!important;
+}
